list followers of user repaired